Fri May 21 01:06:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (subtract_tv): if the rest is zero, should finish waiting
	  immediately.

	* win32/win32.c (subtract): ditto.
	  based on a patch from Roger Pack in [ruby-core:27957].

Thu May 20 22:49:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* re.c (rb_reg_s_union_m): update rdoc.  [ruby-dev:41354]

Thu May 20 20:47:46 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): raise NoMethodError
	  when COM method is not found. [ruby-core:30160] [Bug #3277]

	* test/win32ole/test_win32ole.rb (test_no_method_error): ditto.

Wed May 19 23:36:57 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: [ruby-dev:41334] [Bug #3307] invalid result
	  on searching tcl.h/tk.h. Thanks, Masaya Tarui.

Wed May 19 23:19:30 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): closes the socket of a Net::IMAP
	  object only when it is not closed.  [ruby-dev:41350]

Sun May  9 08:24:24 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): terminates @receiver_thread even if
	  @sock.shutdown raises an exception.  [ruby-dev:34881]

Sun May 16 22:17:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval.c (setup_exception): let SystemStackError#backtrace return an
	  single element array instead of string itself.  [ruby-core:30196]

Sun May 23 17:29:41 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (capi): uses a timestamp file to get rid of 
	  generating twice.

Sun May 23 17:48:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/lib/openssl/x509-internal.rb, lib/forwardable.rb,
	  lib/irb/cmd/fork.rb, lib/mutex_m.rb,
	  lib/shell/process-controller.rb, lib/sync.rb, object.c:
	  suppress warnings patched by Benoit Daloze at [ruby-core:30366].

	* parse.y (warn_balanced): no warning for singleton class.
	  [ruby-core:30366]

Sun May 23 17:16:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
